--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -9,5 +9,13 @@
         android:id="@+id/pokedexListFragment"
         android:name="com.example.pokedex.fragment.PokedexListFragment"
         android:label="fragment_pokedex_list"
-        tools:layout="@layout/fragment_pokedex_list" />
+        tools:layout="@layout/fragment_pokedex_list" >
+        <action
+            android:id="@+id/action_pokedexListFragment_to_pokemonShowFragment"
+            app:destination="@id/pokemonShowFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/pokemonShowFragment"
+        android:name="com.example.pokedex.fragment.PokemonShowFragment"
+        android:label="PokemonShowFragment" />
 </navigation>
