--- a/app/src/main/res/layout/fragment_pokemon_show.xml
+++ b/app/src/main/res/layout/fragment_pokemon_show.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="com.example.pokedex.viewModel.PokemonShowViewModel" />
+    </data>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -32,7 +38,7 @@
                     android:id="@+id/name_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@{viewModel.pokedexEntry.name}"
                     tools:text="Pikachu" />
 
                 <TextView
@@ -45,6 +51,7 @@
 
             <ImageView
                 android:id="@+id/sprite_image"
+                app:imageFromUrl="@{viewModel.pokedexEntry.spriteUrl}"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
