Styling, Font and Cleanup

--- a/app/src/main/res/layout/list_item_pokedex_list.xml
+++ b/app/src/main/res/layout/list_item_pokedex_list.xml
@@ -12,6 +12,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:paddingVertical="8dp"
+        android:background="@drawable/list_seperator"
         android:layout_height="wrap_content">
 
         <ImageView
@@ -28,25 +30,32 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@{`No: ` + pokemon.displayId}"
+            app:fontFamily="@font/pokemon_gb"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/name_text"
-            app:layout_constraintHorizontal_bias="0.1"
-            app:layout_constraintVertical_bias="0.1"
+            app:layout_constraintHorizontal_bias="0.05"
             app:layout_constraintStart_toEndOf="@+id/image_view"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="No: 25" />
+            app:layout_constraintVertical_bias="0.1"
+            tools:text="No: 025" />
 
         <TextView
             android:id="@+id/name_text"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp"
             android:layout_height="wrap_content"
+            android:gravity="start"
             android:text="@{pokemon.name}"
+            android:textAlignment="textStart"
+            app:fontFamily="@font/pokemon_gb"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.1"
             app:layout_constraintStart_toEndOf="@+id/id_text"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.65"
             tools:text="Pikachu" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
