--- a/app/src/main/res/layout/fragment_pokedex_list.xml
+++ b/app/src/main/res/layout/fragment_pokedex_list.xml
@@ -3,8 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".fragment.PokedexListFragment">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pokedex_list_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="24dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 </layout>
