--- a/app/src/main/res/layout/fragment_pokemon_show.xml
+++ b/app/src/main/res/layout/fragment_pokemon_show.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <import type="androidx.core.content.ContextCompat" />
+
         <variable
             name="viewModel"
             type="com.example.pokedex.viewModel.PokemonShowViewModel" />
@@ -18,44 +21,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingTop="60dp">
+            android:paddingTop="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginTop="32dp"
-                android:background="@color/design_default_color_primary"
+                android:layout_marginTop="72dp"
                 android:orientation="vertical"
                 android:paddingHorizontal="24dp"
-                android:paddingTop="80dp">
+                android:paddingTop="72dp"
+                android:paddingBottom="40dp"
+                app:backgroundColor="@{viewModel.species.color.name}">
 
                 <TextView
-                    android:textAlignment="center"
-                    android:layout_gravity="center"
-                    android:textSize="24sp"
-                    android:layout_marginBottom="8dp"
                     android:id="@+id/name_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="16dp"
                     android:text="@{viewModel.pokedexEntry.name}"
+                    android:textAlignment="center"
+                    android:textSize="24sp"
+                    app:fontFamily="@font/pokemon_gb"
+                    app:textColor="@{viewModel.species.color.name}"
                     tools:text="Pikachu" />
 
                 <TextView
                     android:id="@+id/description_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
+                    android:text="@{viewModel.species.description.text}"
+                    app:fontFamily="@font/pokemon_gb"
+                    app:textColor="@{viewModel.species.color.name}"
                     tools:text="This little blurb in here should describe everything about the pokemon" />
             </LinearLayout>
 
             <ImageView
                 android:id="@+id/sprite_image"
-                app:imageFromUrl="@{viewModel.pokedexEntry.spriteUrl}"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
-                />
+                android:scaleType="center"
+                app:imageFromUrl="@{viewModel.pokedexEntry.spriteUrl}" />
         </FrameLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
