File Renaming and Fix pagination

--- a/app/src/main/res/layout/list_item_pokedex_list.xml
+++ b/app/src/main/res/layout/list_item_pokedex_list.xml
@@ -20,6 +20,7 @@
             android:id="@+id/image_view"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            app:imageFromUrl="@{pokemon.spriteUrl}"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
