--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/pokemonListFragment">
+    app:startDestination="@id/pokemonListFragment"
+    tools:ignore="UnusedNavigation">
 
     <fragment
         android:id="@+id/pokemonListFragment"
