--- a/app/src/main/res/layout/fragment_pokemon_show.xml
+++ b/app/src/main/res/layout/fragment_pokemon_show.xml
@@ -43,7 +43,7 @@
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:fontFamily="@font/pokemon_gb"
-                    tools:text="Pikachu" />
+                    tools:text="Pokemon" />
                 <!--                app:textColor="@{viewModel.species.color.name}"-->
 
                 <!--                <TextView-->
@@ -62,7 +62,8 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
                 android:contentDescription="@{viewModel.pokemonEntry.name}"
-                android:scaleType="center"
+                android:scaleType="centerInside"
+                tools:srcCompat="@drawable/ic_pokeball"
                 app:imageFromUrl="@{viewModel.pokemonEntry.spriteUrl}" />
         </FrameLayout>
     </androidx.core.widget.NestedScrollView>
