--- a/app/src/main/res/layout/fragment_pokemon_show.xml
+++ b/app/src/main/res/layout/fragment_pokemon_show.xml
@@ -31,8 +31,9 @@
                 android:orientation="vertical"
                 android:paddingHorizontal="24dp"
                 android:paddingTop="72dp"
-                android:paddingBottom="40dp">
-                <!--            app:backgroundColor="@{viewModel.species.color.name}"-->
+                android:paddingBottom="40dp"
+                app:backgroundColor="@{viewModel.pokemon.species.color}">
+
                 <TextView
                     android:id="@+id/name_text"
                     android:layout_width="match_parent"
@@ -43,8 +44,8 @@
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:fontFamily="@font/pokemon_gb"
+                    app:textColor="@{viewModel.pokemon.species.color}"
                     tools:text="Pokemon" />
-                <!--                app:textColor="@{viewModel.species.color.name}"-->
 
                 <!--                <TextView-->
                 <!--                    android:id="@+id/description_text"-->
@@ -62,9 +63,9 @@
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
                 android:contentDescription="@{viewModel.pokemonEntry.name}"
-                android:scaleType="centerInside"
-                tools:srcCompat="@drawable/ic_pokeball"
-                app:imageFromUrl="@{viewModel.pokemonEntry.spriteUrl}" />
+                android:scaleType="fitCenter"
+                app:imageFromUrl="@{viewModel.pokemonEntry.spriteUrl}"
+                tools:srcCompat="@drawable/ic_pokeball" />
         </FrameLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
